--- a/index.html
+++ b/index.html
@@ -8,94 +8,189 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="container">
-            <div class="header">
-                <img src="assets/logo.svg" alt="logo">
-                <div class="navbar">
-                    <p>About us</p>
-                    <p>Services</p>
-                    <p>Work</p>
-                    <p>News</p>
-                    <p>Contacts</p> 
-                </div>
-                <div class="contacts">
-                    <div class="contactsItem">
-                        <img src="assets/iPhone.svg" alt="phone">
-                        <div class="contactsInfo">
-                            <p>Call us</p>
-                            <p>(996) 707-86-85-58</p>
-                        </div>
+        <div class="headerWrapper">
+           <div class="container">
+               <div class="header">
+                    <img src="assets/logo.svg" alt="logo">
+                    <div class="navbar">
+                       <p>About us</p>
+                       <p>Services</p>
+                       <p>Work</p>
+                       <p>News</p>
+                       <p>Contacts</p> 
                     </div>
-                    <div class="contactsItem">
-                        <img src="assets/Chat.svg" alt="email">
-                        <div class="contactsInfo">
-                            <p>Talk to us</p>
-                            <p>Hello@gmail.com</p>
-                        </div> 
-                    </div>   
+                    <div class="contacts">
+                       <div class="contactsItem">
+                           <img src="assets/iPhone.svg" alt="phone">
+                           <div class="contactsInfo">
+                             <p>Call us</p>
+                             <p>(996) 707-86-85-58</p>
+                           </div>
+                       </div>
+                       <div class="contactsItem">
+                           <img src="assets/Chat.svg" alt="email">
+                           <div class="contactsInfo">
+                              <p>Talk to us</p>
+                              <p>Hello@gmail.com</p>
+                           </div> 
+                       </div>   
+                    </div>
+                    <div class="mobileMenu">
+                       <img src="assets/menu.svg" alt="menu">
+                    </div>
+               </div>
+               <div class="mobileMenuOpened">
+                   <div class="container">
+                       <div>
+                          <img class="mobileMenuClose" src="assets/close.svg" alt="close"> 
+                       </div>
+                   </div>
+                   <div class="mobileMenuItem">
+                      <p>About us</p>
+                      <p>Services</p>
+                      <p>Work</p>
+                      <p>News</p>
+                      <p>Contacts</p> 
+                   </div>
+               </div>
+            </div>
+        </div>
+
+        <div class="hero">  
+            <div class="Container">
+                <div>
+                    <img src="assets/CREATEX (1).png" alt="CREATEX">
+                </div>
+                <br>
+                <div>
+                    <img src="assets/Cras ultrices (1).png" alt="Cras ultrices">
+                </div>
+                <br>
+                <div class="buttons">
+                    <div>
+                        <img src="assets/largeoutline.png" alt="largeoutline">
+                        <img src="assets/largesolid.png" alt="largesolid">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="hero">
-         <div class="container">
-         </div>
-            <div>
-                <img src="assets/CREATEX (1).png" alt="CREATEX">
-                <p></p>
-                <p></p>
-            </div>
-            <div>
-                <img src="assets/Cras ultrices (1).png" alt="Cras ultrices">
-                <p></p>
-                <p></p>
-            </div>
-            <div class="buttons">
-                <div>
-                    <img src="assets/largeoutline.png" alt="largeoutline">
-                    <img src="assets/largesolid.png" alt="largesolid">
-                </div>
-         </div>
-         <div class="values">
-            <p>Our core values</p>
-            <p>Our mission is to set the highest standards for construction sphere.</p>
-            <div>
-                <div>
-                    <img src="" alt="icon">
-                    <p></p>
-                    <p></p>
-                </div>
-                <div>
-                    <img src="" alt="icon">
-                    <p></p>
-                    <p></p>
-                    <div>
-                        <img src="" alt="icon">
-                        <p></p>
-                        <p></p>
+
+        <div class="container">
+            <div class="values">
+                <h1>Our core values</h1>
+                <p>Our mission is to set the highest standards for construction sphere.</p>
+                <div class="icon-boxes">
+                    <div class="ic-like">
+                        <img src="assets/ic-like.svg" alt="ic-like">
+                        <br>
+                        <img src="assets/Quality.png" alt="Quality">
+                        <br>
+                        <img src="assets/Culpa.png" alt="Culpa">
+                    </div>
+                    <div class="ic-hand">
+                        <img src="assets/ic-hand.svg" alt="ic-hand">
+                        <br>
+                        <img src="assets/Safety.png" alt="Safety">
+                        <br>
+                        <img src="assets/Anim.png" alt="Anim">
+                    </div>
+                    <div class="ic-slippers">
+                        <img src="assets/ic-slippers.svg" alt="ic-slippers">
+                        <br>
+                        <img src="assets/Comfort.png" alt="Comfort">
+                        <br>
+                        <img src="assets/Sit.png" alt="Sit">
                     </div>
                 </div>
             </div>
+        </div>
 
-         </div>
+            <div class="formWrapper">
+               <div class="container">
+                   <div class="form"> 
+                       <p class="formTitle">Want to know more? Ask us a question:</p> 
+                       <form class="formData"> 
+                           <div class="formInput"> 
+                               <label for="nameInput">Name</label> 
+                               <input id="nameInput" type="text" placeholder="Your name"> 
+                           </div> 
+                           <div class="formInput"> 
+                               <label for="phoneInput">Phone</label> 
+                               <input id="phoneInput" type="text" placeholder="Your phone"> 
+                           </div> 
+                           <div class="formInput"> 
+                               <label for="messageInput">Message</label> 
+                               <input id="messageInput" type="text" placeholder="Your message"> 
+                           </div> 
+                           <button class="formBtn">SEND</button>
+                       </form> 
+                   </div>
+               </div>
+           </div>
 
-         <div class="form">
-            <p class="formTitle">Want to know more? Ask us a question:</p>
-            <form class="formData">
-                <div class="formInput">
-                    <label for="nameInput">Name</label>
-                    <input id="nameInput" type="text">
+           <div class="services">
+               <p class="servicesTitle">Our services</p>
+               <p class="servicesSubtitle">Createx Construction Bureau is a construction giant with a full range of construction services.</p>
+               <div class="container">
+                   <div class="servicesItems">
+                       <div class="servicesItem">
+                           <img src="assets/ic-construction.png" alt="ic-construction">
+                           <p>Construction</p>
+                       </div>
+                       <div class="servicesItem">
+                           <img src="assets/ic-plan.svg" alt="ic-plan">
+                           <p>Project Development</p>
+                       </div>
+                       <div class="servicesItem">
+                           <img src="assets/Vector.svg" alt="Vector">
+                           <p>Interior Design</p>
+                       </div>
+                       <div class="servicesItem">
+                           <img src="assets/ic-painting.svg" alt="ic-painting">
+                           <p>Repairs</p>
+                       </div>
+                   </div>
+               </div>
+               <div class="servicesMore">
+                   <p>Learn more about our services</p>
+                   <button class="servicesBtn">VIEW SERVICES</button>
+               </div>
+           </div> 
+
+        <div class="portfolio">
+            <h1 class="portfolioTitle">Browse our selected projects and learn more about our work</h1>
+            <div class="container">
+                <div class="portfolioCards">
+                    <div class="portfolioCard">
+                      <img src="assets/project1.jpg" alt="project1">
+                      <div class="projectName">
+                        <h3>Red Finger Building</h3>
+                        <p>Business Centers</p>
+                      </div>
+                    </div>
+                    <div class="portfolioCard">
+                        <img src="assets/project2.png" alt="project2">
+                        <div class="projectName">
+                            <h3>Cubes Building</h3>
+                            <p>Business Centers</p>
+                            <button class="portfolioBtnCard">VIEW PROJECT</button>
+                        </div>
+                    </div>
+                    <div class="portfolioCard">
+                        <img src="assets/project3.png" alt="project3">
+                        <div class="projectName">
+                            <h3>The Pencil Building</h3>
+                            <p>Stores&Malls</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="formInput">
-                    <label for="phoneInput">Phone</label>
-                    <input id="phoneInput" type="text">
-                </div>
-                <div class="formInput">
-                    <label for="messageInput">Message</label>
-                    <input id="messageInput" type="text">
-                </div>
-                <button>SEND</button>
-            </form>
-         </div>
+            </div>
+            <div class="portfolioMore">
+                <h3>Explore all our works</h3>
+                <button class="portfolioBtn">VIEW PORTFOLIO</button>
+            </div>
+        </div>
     </div>
 </body>
+<script src="JS/app.js"></script>
 </html>
