--- a/index.html
+++ b/index.html
@@ -190,6 +190,38 @@
                 <button class="portfolioBtn">VIEW PORTFOLIO</button>
             </div>
         </div>
+        <div class="clientWrapper">
+            <div class="container">
+                <div class="clients">
+                    <h1>Supported by 12+ partners</h1>
+                    <div class="clientLogo">
+                         <img src="assets/InDepth.png" alt="InDepth">
+                         <img src="assets/Higher.png" alt="Higher">
+                         <img src="assets/Sentinal.png" alt="Sentinal">
+                         <img src="assets/HappyHome.png" alt="HappyHome">
+                         <img src="assets/ForSale.png" alt="ForSale">
+                         <img src="assets/Sunset.png" alt="Sunset">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="testimonials">
+            <h1>What our clients are saying</h1>
+            <div class="container">
+                <div class="testimonialsCarousel">
+                    <img class="profile" src="assets/profile-image.png" alt="profile-image">
+                    <div class="reviewContent">
+                        <p>Ipsum aute sunt aliquip aute et occaecat. Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  laboris cillum laboris voluptate minim proident exercitation ullamco. </p>
+                        <div class="namePosition">
+                            <h4>Shawn Edwards</h4>
+                            <p>Position, Company name</p>
+                        </div>
+                    </div>
+                    <img class="testimonialsInput" src="assets/imageClient.jpg" alt="imageClient">
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 <script src="JS/app.js"></script>
