--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                </div>
                <div class="mobileMenuOpened">
                    <div class="container">
-                       <div>
+                       <div class="mobileMenuHeader">
                           <img class="mobileMenuClose" src="assets/close.svg" alt="close"> 
                        </div>
                    </div>
