--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                        <div class="contactsItem">
                            <img src="assets/Chat.svg" alt="email">
                            <div class="contactsInfo">
-                              <p>Talk to us</p>
-                              <p>Hello@gmail.com</p>
-                           </div> 
+                               <p>Talk to us</p>
+                               <p>Hello@gmail.com</p>
+                           </div>
                        </div>   
                     </div>
                     <div class="mobileMenu">
@@ -51,6 +51,18 @@
                       <p>Work</p>
                       <p>News</p>
                       <p>Contacts</p> 
+                   </div>
+                   <div class="mobileMenuInfo">
+                       <div class="mobileMenuPhone">
+                          <img src="assets/iPhone.svg" alt="phone">
+                          <p>Call us</p>
+                          <p>(996) 707-86-85-58</p>
+                       </div>
+                       <div class="mobileMenuChat">
+                          <img src="assets/Chat.svg" alt="email">
+                          <p>Talk to us</p>
+                          <p>Hello@gmail.com</p>
+                       </div>
                    </div>
                </div>
             </div>
@@ -132,7 +144,7 @@
                <p class="servicesTitle">Our services</p>
                <p class="servicesSubtitle">Createx Construction Bureau is a construction giant with a full range of construction services.</p>
                <div class="container">
-                   <div class="servicesItems">
+                   <!-- <div class="servicesItems">
                        <div class="servicesItem">
                            <img src="assets/ic-construction.png" alt="ic-construction">
                            <p>Construction</p>
@@ -149,7 +161,8 @@
                            <img src="assets/ic-painting.svg" alt="ic-painting">
                            <p>Repairs</p>
                        </div>
-                   </div>
+                   </div> -->
+                   <div class="serviceItems"></div>
                </div>
                <div class="servicesMore">
                    <p>Learn more about our services</p>
